feat(core): 重构扩展生命周期管理，增强配置和初始化逻辑
- 更新多个扩展类以支持新的 onConfigure 方法，接收配置属性。
- 移除不必要的字段和方法，简化类结构。
- 增强日志记录，提供更清晰的调试信息。
- 在 ExtensionGroup 中添加生命周期管理逻辑，确保扩展的正确初始化和销毁。